# country-django-graphql-example

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml  requirements.dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
docker-compose/: storages.yml
postgres/master/: Dockerfile  setup-master.sh
postgres/slave/: docker-entrypoint.sh
project/: asgi.py  settings.py  urls.py
project/country/: admin.py  apps.py  models.py
project/country/migrations/: 0001_initial.py
project/country/tests/: factories.py
project/graphql/: __init__.py  apps.py  consumers.py  loaders.py  middlewares.py  mutations.py  query.py  schema.py  signals.py  subscription.py  tests.py  urls.py  utils.py
project/graphql/tests/: conftest.py  test_mutations.py  test_queries.py
project/helpers/: dict_factoy.py
